--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.4",
     "next": "15.3.1",
